--- a/BmsWpf/MainWindow.xaml
+++ b/BmsWpf/MainWindow.xaml
@@ -5,24 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="549.935" Width="725.398" FontSize="14" Background="#FF030F1D">
-	<Window.DataContext>
-		<viewModels:MainWindowViewModel />
-	</Window.DataContext>
-	<Border Background="#2e3137" CornerRadius="20" Margin="20,20,20.2,13">
-		<Grid Margin="10,0,-9.8,-36.8" RenderTransformOrigin="0.376,0.485" Height="524" VerticalAlignment="Top">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="464*"/>
-				<RowDefinition Height="57*"/>
-			</Grid.RowDefinitions>
-			<Label Content="Welcome!" Foreground="White" FontSize="36" HorizontalAlignment="Center" RenderTransformOrigin="3.536,-1.191" Margin="247,37,252,376.4" Width="180" FontWeight="Bold"/>
-            <Button Content="Active Projects" Background="#FF104C71" Margin="67,151,359,259" Foreground="White" FontSize="22" Command="{Binding ActiveProjects}" />
-			<Button Content="Offers" Background="#FF104C71" Margin="67,224,359,186" Foreground="White" FontSize="22" Command="{Binding Offers}" />
-			<Button Content="Inquiries" Background="#FF104C71" Margin="358,224,68,186" Foreground="White" FontSize="22" Command="{Binding Inquiries}" />
-			<Button Name="Contragents" Content="Contragents" Background="#FF104C71" Margin="358,151,68,259" Foreground="White" FontSize="22" Command="{Binding Contragents}"/>
+        Title="MainWindow" Height="600" Width="750" FontSize="16" Background="#FF030F1D">
+    <Window.DataContext>
+        <viewModels:MainWindowViewModel />
+    </Window.DataContext>
+    <Border Background="#2e3137" CornerRadius="20" Margin="20,20,20.2,13">
+        <Grid Margin="10,0,-9.8,-36.8" RenderTransformOrigin="0.376,0.485" Height="524" VerticalAlignment="Top">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="464*"/>
+                <RowDefinition Height="57*"/>
+            </Grid.RowDefinitions>
+            <Label Content="Business Management System" Foreground="White" FontSize="30" HorizontalAlignment="Center" RenderTransformOrigin="3.536,-1.191"  Width="441" FontWeight="Bold" Margin="130,51,132.8,349.4"/>
+            <Button Content="Projects" Background="#FF104C71" Margin="358,143,67.8,267.4" Foreground="White" FontSize="22" Command="{Binding ActiveProjects}" />
+            <Button Content="Offers" Background="#FF104C71" Margin="67,221,358.8,189.4" Foreground="White" FontSize="22" Command="{Binding Offers}" />
+            <Button Content="Inquiries" Background="#FF104C71" Margin="67,143,358.8,267.4" Foreground="White" FontSize="22" Command="{Binding Inquiries}" />
+            <Button Content="Contragents" Background="#FF104C71" Margin="67,296,358.8,113.4" Foreground="White" FontSize="22" Command="{Binding Contragents}"/>
+            <Button Content="Invoices" Background="#FF104C71" Margin="358,221,67.8,188.4" Foreground="White" FontSize="22" Command="{Binding Invoices}"/>
+            <Button Content="Events" Background="#FF104C71" Margin="358,296,67.8,113.4" Foreground="White" FontSize="22" Command="{Binding CalendarEvents}"/>
+
             <Separator HorizontalAlignment="Left" Height="27" Margin="67,90,0,0" VerticalAlignment="Top" Width="544"/>
-			<Separator HorizontalAlignment="Left" Height="27" Margin="67,381,0,0" VerticalAlignment="Top" Width="544"/>
-            <Button Content="LOGOUT" Background="#FF972B2B" Margin="475,333,68,90.4" Foreground="White" FontSize="22" Command="{Binding Logout}" />
-		</Grid>
-	</Border>
+            <Separator HorizontalAlignment="Left" Height="27" Margin="67,381,0,0" VerticalAlignment="Top" Width="544"/>
+            <Button Content="Logout" Background="#FF972B2B" Margin="475,408,67.8,15.4" Foreground="White" FontSize="22" Command="{Binding Logout}" RenderTransformOrigin="0.424,1.967" />
+        </Grid>
+    </Border>
 </Window>
