--- a/BmsWpf/Views/ChildWindows/ActiveProjects.xaml
+++ b/BmsWpf/Views/ChildWindows/ActiveProjects.xaml
@@ -28,7 +28,7 @@
         <Separator HorizontalAlignment="Left" Height="17" Margin="171,64,0,0" VerticalAlignment="Top" Width="303"/>
         <ListBox Name="ChosenProjects" HorizontalAlignment="Left" Height="195" Margin="45,201,0,0" VerticalAlignment="Top" Width="577" ItemsSource="{Binding ChosenProjects}"/>
         <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Background="#FF4074CB" Foreground="White" FontSize="14" Margin="435,457,0,0" Command="{Binding EditProject}"/>
-        <Button Content="Add new" HorizontalAlignment="Left" Margin="45,415,0,0" VerticalAlignment="Top" Width="75" Background="#FF0D5923" Foreground="White" FontSize="14" Command="{Binding AddNewProject}"/>
+        <Button Content="Add new" HorizontalAlignment="Left" Margin="45,415,0,0" VerticalAlignment="Top" Width="75" Background="#FF0D5923" Foreground="White" FontSize="14" Command="{Binding AddNewProject}" Click="Button_Click"/>
         <Button Content="Back" HorizontalAlignment="Left" Margin="547,457,0,0" VerticalAlignment="Top" Width="75" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Back}"/>
     </Grid>
 </Window>
