--- a/BmsWpf/Views/Forms/PaymentSupplierForm.xaml
+++ b/BmsWpf/Views/Forms/PaymentSupplierForm.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="BmsWpf.Views.Forms.PaymentForm"
+﻿<Window x:Class="BmsWpf.Views.Forms.PaymentSupplierForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BmsWpf.Views.Forms"
         mc:Ignorable="d"
-        Title="PaymentClientForm" Height="600" Width="750" Background="#2e3137">
-    <Grid Margin="0,25,0,-24.6">
-        <Label Content="Client" HorizontalAlignment="Left" Margin="42,110,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <ComboBox Name="ClientComboBox" HorizontalAlignment="Left" Height="30" Margin="142,110,0,0" Text="TextBox" VerticalAlignment="Top" Width="200"/>
+        Title="PaymentSupplierForm"  Height="600" Width="750" Background="#2e3137">
+    <Grid>
+        <Label Content="Supplier" HorizontalAlignment="Left" Margin="42,110,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <ComboBox Name="SupplierComboBox" HorizontalAlignment="Left" Height="30" Margin="142,110,0,0" Text="TextBox" VerticalAlignment="Top" Width="200"/>
         <Label Content="Date" HorizontalAlignment="Left" Margin="42,75,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue" />
         <DatePicker Name="PaymentDatePicker" HorizontalAlignment="Left" Margin="142,75,0,0" VerticalAlignment="Top" Height="30" Width="200"/>
         <Label Content="Price" HorizontalAlignment="Left" Margin="42,148,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
