--- a/BmsWpf/Views/Forms/InvoiceClientForm.xaml
+++ b/BmsWpf/Views/Forms/InvoiceClientForm.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="BmsWpf.Views.Forms.InvoiceForm"
+﻿<Window x:Class="BmsWpf.Views.Forms.InvoiceClientForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BmsWpf.Views.Forms"
         mc:Ignorable="d"
-        Title="InvoiceForm" Height="500" Width="500">
+        Title="InvoiceClientForm" Height="600" Width="750" FontSize="16" Background="#FF030F1D">
     <Grid Margin="0,0,-6.4,-1.6" Background="#FF2E3137">
         <Separator Margin="42,60,62.6,379.6" />
-        <Label Content="Invoice"  HorizontalAlignment="Left" Foreground="#FFA1EAE8" FontSize="30" FontWeight="Bold" Margin="179,10,0,0" VerticalAlignment="Top" Width="121"/>
+        <Label Content="Client Invoice"  HorizontalAlignment="Left" Foreground="#FFA1EAE8" FontSize="30" FontWeight="Bold" Margin="10,5,0,0" VerticalAlignment="Top" Width="740"/>
         <TextBox Height="30" BorderThickness="2"  BorderBrush="#313c4f" Margin="42,103,401,0" Foreground="Gray"  TextAlignment="Center" TextWrapping="Wrap" Text="Id" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" VerticalContentAlignment="Center"/>
         <TextBox Height="130" Margin="42,147,51,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Text" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
         <TextBox Height="30" Margin="276,102,52,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Supplier / Client" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
