--- a/BmsWpf/Views/ChildWindows/MainCalendarEvents.xaml
+++ b/BmsWpf/Views/ChildWindows/MainCalendarEvents.xaml
@@ -10,8 +10,17 @@
         <Calendar VerticalAlignment="Top" HorizontalAlignment="Left" Margin="28,48,0,0" Height="166" Width="181"></Calendar>
         <Button x:Name ="BackButton" Click="Back_OnClickButton_Click" Content="Back" Background="AliceBlue" Height="30" Margin="28,401,535,139.4"/>
         <Button x:Name="addEventButton" Content="Add new event" Click="addEventButton_Click" Background="AliceBlue"  Margin="28,348,535,192.4"/>
-        <ScrollViewer Background="AntiqueWhite" HorizontalAlignment="Right" Height="383" Margin="0,48,39,0" VerticalAlignment="Top" Width="452" VerticalScrollBarVisibility="Auto">
-            <TextBox x:Name="eventView" TextChanged="TextBox_TextChanged"/>
+        <ScrollViewer Background="AntiqueWhite" HorizontalAlignment="Right" Height="383" Margin="0,48,63,0" VerticalAlignment="Top" Width="428" VerticalScrollBarVisibility="Auto">
+            <ListView Name="eventView">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Title" Width="30" DisplayMemberBinding="{Binding Title}"></GridViewColumn>
+                        <GridViewColumn Header="Description" Width="250" DisplayMemberBinding="{Binding Description}"></GridViewColumn>
+                        <GridViewColumn Header="Start Time" Width="70" DisplayMemberBinding="{Binding StartTime}"></GridViewColumn>
+                        <GridViewColumn Header="End Time" Width="70" DisplayMemberBinding="{Binding EndTime}"></GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </ScrollViewer>
         <TextBlock x:Name="timeView" HorizontalAlignment="Left" Margin="377,21,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" FontSize="16" Width="131" Foreground="White"/>
         <Label Content="Events for:" Foreground="White" FontSize="18" HorizontalAlignment="Left" Margin="253,14,0,0" VerticalAlignment="Top" Width="100"/>
