--- a/BmsWpf/Views/Forms/ContragentForm.xaml
+++ b/BmsWpf/Views/Forms/ContragentForm.xaml
@@ -8,9 +8,9 @@
         mc:Ignorable="d"
 
         Title="ContragentForm" Height="705.626" Width="631.15">
-	<Window.DataContext>
-		<viewModels:ContragentViewModel />
-	</Window.DataContext>
+<!--	<Window.DataContext>-->
+<!--		<viewModels:ContragentViewModel />-->
+<!--	</Window.DataContext>-->
 	<Grid Margin="0,3,4,1" Background="#FF2E3137">
 		<Label Content="Contragent" HorizontalAlignment="Left" Foreground="#FF97D4D3" FontSize="30" FontWeight="Bold" Margin="315,28,0,0" VerticalAlignment="Top"/>
 		<TextBox Name ="Name" Height="27" Margin="250,108,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Name}"/>
@@ -22,8 +22,8 @@
 		<TextBox Name ="Address" Height="27" Margin="250,374,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Address}"/>
 		<TextBox Name="BankDetails" Height="27"  Margin="250,423,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding BankDetails}"/>
 		<TextBox Name="Description" Height="86" Margin="250,468,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f" VerticalContentAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Description}"/>
-        <Button Content="Save" HorizontalAlignment="Left" Margin="329,602,0,0" VerticalAlignment="Top" Width="112" Background="#FF1D5A8C" Foreground="White" FontWeight="Bold" FontSize="16" Command="{Binding Save}" Click="Save_Click" RenderTransformOrigin="-0.133,0.56"  />
-		<Button Content="Back" HorizontalAlignment="Left" Margin="465,602,0,0" VerticalAlignment="Top" Width="112" Foreground="White" Background="#FFAE3434" FontSize="16" FontWeight="Bold" Command="{Binding Back}" Click="Back_Click" />
+		<Button Content="Save" HorizontalAlignment="Left" Margin="329,602,0,0" VerticalAlignment="Top" Width="112" Background="#FF1D5A8C" Foreground="White" FontWeight="Bold" FontSize="16" Click="Save_Click" RenderTransformOrigin="-0.133,0.56"   />
+		<Button Content="Back" HorizontalAlignment="Left" Margin="465,602,0,0" VerticalAlignment="Top" Width="112" Foreground="White" Background="#FFAE3434" FontSize="16" FontWeight="Bold" Click="Back_Click" />
 		<Label Content="Company Name" Foreground="White" HorizontalAlignment="Left" Margin="75,108,0,0" VerticalAlignment="Top" Width="149"/>
 		<Label Content="VAT Number" Foreground="White" HorizontalAlignment="Left" Margin="75,154,0,0" VerticalAlignment="Top" Width="149"/>
 		<Label Content="Phone Number" Foreground="White" HorizontalAlignment="Left" Margin="75,244,0,0" VerticalAlignment="Top" Width="149"/>
