--- a/BmsWpf/Views/ChildWindows/ActiveProjects.xaml
+++ b/BmsWpf/Views/ChildWindows/ActiveProjects.xaml
@@ -16,19 +16,17 @@
         </intr:EventTrigger>
     </intr:Interaction.Triggers>
     <Grid Background="#FF2E3137" Margin="0,0,3.6,-3">
-        <Label Content="ACTIVE PROJECTS" HorizontalAlignment="Left" Margin="211,22,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White"/>
-        <DatePicker HorizontalAlignment="Left" Margin="102,106,0,0" VerticalAlignment="Top" SelectedDate="{Binding Path=BeginDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <DatePicker HorizontalAlignment="Left" Margin="247,106,0,0" VerticalAlignment="Top" SelectedDate="{Binding Path=EndDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Content="Search" HorizontalAlignment="Left" Margin="386,110,0,0" VerticalAlignment="Top" Width="75" Background="#FF1A76AE" Foreground="White" FontWeight="Bold" Command="{Binding Search}"/>
-        <Button Content="Sort" HorizontalAlignment="Left" Margin="298,151,0,0" VerticalAlignment="Top" Width="75" Foreground="White" FontWeight="Bold" Background="#FF247114" Height="22"/>
-        <ComboBox HorizontalAlignment="Left" Margin="149,151,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Sort by:" HorizontalAlignment="Left" Margin="77,149,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="White"/>
-        <Label Content="From" HorizontalAlignment="Left" Margin="60,104,0,0" VerticalAlignment="Top" Foreground="#FFDCE4DC" FontWeight="Bold"/>
-        <Label Content="To" HorizontalAlignment="Left" Margin="220,104,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="White"/>
-        <Separator HorizontalAlignment="Left" Height="17" Margin="171,64,0,0" VerticalAlignment="Top" Width="303"/>
-        <ListBox Name="ChosenProjects" HorizontalAlignment="Left" Height="195" Margin="45,201,0,0" VerticalAlignment="Top" Width="577" ItemsSource="{Binding ChosenProjects}"/>
-        <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Background="#FF4074CB" Foreground="White" FontSize="14" Margin="435,457,0,0" Command="{Binding EditProject}"/>
-        <Button Content="Add new" HorizontalAlignment="Left" Margin="45,415,0,0" VerticalAlignment="Top" Width="75" Background="#FF0D5923" Foreground="White" FontSize="14" Command="{Binding AddNewProject}" Click="Button_Click"/>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="547,457,0,0" VerticalAlignment="Top" Width="75" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Back}"/>
+        <Label Content="ACTIVE PROJECTS" HorizontalAlignment="Left" Margin="231,39,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White"/>
+        <DatePicker Name="fromDater" HorizontalAlignment="Left" Margin="93,148,0,0" VerticalAlignment="Top" SelectedDate="{Binding Path=BeginDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <DatePicker Name="toDater" HorizontalAlignment="Left" Margin="260,147,0,0" VerticalAlignment="Top" SelectedDate="{Binding Path=EndDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Content="Search" HorizontalAlignment="Left" Margin="399,152,0,0" VerticalAlignment="Top" Width="75" Background="#FF1A76AE" Foreground="White" FontWeight="Bold" Command="{Binding Search}" Click="Search_Click"/>
+        <Label Content="From" HorizontalAlignment="Left" Margin="51,146,0,0" VerticalAlignment="Top" Foreground="#FFDCE4DC" FontWeight="Bold"/>
+        <Label Content="To" HorizontalAlignment="Left" Margin="231,147,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="White"/>
+        <Separator HorizontalAlignment="Left" Height="17" Margin="171,86,0,0" VerticalAlignment="Top" Width="303"/>
+        <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="81" Background="#FF4074CB" Foreground="White" FontSize="14" Margin="146,408,0,0" Command="{Binding EditProject}" Height="34"/>
+        <Button Content="Add new" HorizontalAlignment="Left" Margin="31,408,0,0" VerticalAlignment="Top" Width="99" Background="#FF0D5923" Foreground="White" FontSize="14" Command="{Binding AddNewProject}" Click="Button_Click" Height="34"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="556,450,0,0" VerticalAlignment="Top" Width="81" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Back}" Height="27"/>
+        <DataGrid Name="ProjectsDataGrid" HorizontalAlignment="Left" Height="195" Margin="31,198,0,0" VerticalAlignment="Top" Width="606" Loaded="ProjectsDataGrid_Loaded" MouseDoubleClick="ProjectsDataGrid_MouseDoubleClick" SelectionMode="Single"/>
+        <Button Content="Delete" HorizontalAlignment="Left" Margin="247,408,0,0" VerticalAlignment="Top" Width="83" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Delete}" Height="34"/>
     </Grid>
 </Window>
